[project]
name = "pytorch-test"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "jupyterlab>=4.5.7",
    "matplotlib>=3.9.3",
    "model2vec>=0.3.5",
    "scikit-learn>=1.8.0",
    "torch>=2.5.1",
    "torchinfo>=1.8.0",
    "torchvision>=0.20.1",
    "transformers>=5.8.1",
]
